--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Sports Website</title>
     <link rel="stylesheet" href="style.css">
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7727019461193415"
+     crossorigin="anonymous"></script>
+    
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-FWST2YCH65"></script>
 <script>
