--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Sports Website</title>
     <link rel="stylesheet" href="style.css">
 
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7727019461193415"
+     crossorigin="anonymous"></script>
+    
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7727019461193415"
      crossorigin="anonymous"></script>
     
