--- a/signup.html
+++ b/signup.html
@@ -136,7 +136,7 @@
           toast.className = "show";
           setTimeout(() => {
             toast.className = toast.className.replace("show", "");
-            window.location.href = "signin.html"; // redirect to Sign In
+            window.location.href = "index.html"; // redirect to Sign In
           }, 3000);
         })
         .catch((error) => {
