--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sports Website</title>
@@ -13,7 +13,7 @@
             <span id="userEmail"></span> <!-- Display user email -->
             <button id="signoutButton">Sign Out</button> <!-- Sign Out Button -->
         </div>
-        <h1>Welcome to the Football Legacy Website</h1>
+        <h1>Welcome to the Football legacy Website</h1>
         <nav>
             <ul>
                 <li><a href="#search">Search</a></li>
@@ -93,4 +93,5 @@
     </script>
 </body>
 </html>
+
 
