--- a/Leverkusen.html
+++ b/Leverkusen.html
@@ -91,7 +91,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/en/thumb/5/59/Bayer_04_Leverkusen_logo.svg/1200px-Bayer_04_Leverkusen_logo.svg.png" alt="Bayer Leverkusen Logo">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History</a></li>
                 <li><a href="#achievements">Achievements</a></li>
                 <li><a href="#players">Players</a></li>
