--- a/ac.html
+++ b/ac.html
@@ -94,7 +94,7 @@
         <h1>AC Milan</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History</a></li>
                 <li><a href="#achievements">Achievements</a></li>
             </ul>
