--- a/ahly.html
+++ b/ahly.html
@@ -142,7 +142,7 @@
         <h1>Al Ahly SC</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Al Ahly</a></li>
                 <li><a href="#achievements">Trophies of Al Ahly</a></li>
             </ul>
