--- a/al_hilal.html
+++ b/al_hilal.html
@@ -92,7 +92,7 @@
         <h1>Al Hilal Saudi FC</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Al Hilal</a></li>
                 <li><a href="#achievements">Trophies of Al Hilal</a></li>
             </ul>
