--- a/al_nassr.html
+++ b/al_nassr.html
@@ -101,7 +101,7 @@
         <h1>Al Nassr</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Al Nassr</a></li>
                 <li><a href="#achievements">Trophies of Al Nassr</a></li>
             </ul>
