--- a/arsenal.html
+++ b/arsenal.html
@@ -95,7 +95,7 @@
         <h1>Arsenal FC</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Arsenal</a></li>
                 <li><a href="#achievements">Arsenal Achievements</a></li>
             </ul>
