--- a/atmadrid.html
+++ b/atmadrid.html
@@ -95,7 +95,7 @@
         <h1>Atletico Madrid</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History</a></li>
                 <li><a href="#achievements">Achievements</a></li>
             </ul>
