--- a/barcelona.html
+++ b/barcelona.html
@@ -119,7 +119,7 @@
         <h1>FC Barcelona</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of FC Barcelona</a></li>
                 <li><a href="#achievements">Trophies of FC Barcelona</a></li>
             </ul>
