--- a/bayern.html
+++ b/bayern.html
@@ -101,7 +101,7 @@
         <h1>FC Bayern Munich</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Bayern</a></li>
                 <li><a href="#achievements">Trophies of Bayern</a></li>
             </ul>
