--- a/jev.html
+++ b/jev.html
@@ -95,7 +95,7 @@
         <h1>Juventus FC</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="#history">History of Juventus</a></li>
                 <li><a href="#achievements">Juventus Achievements</a></li>
             </ul>
